Fix de usabilidad. overflow en el menu selector y tamaño de los iconos de exchangers

--- a/app/styles/components/_content.scss
+++ b/app/styles/components/_content.scss
@@ -42,6 +42,11 @@
   }
 
   .panel-group {
+
+    .panel {
+      overflow: none;
+    }
+
     .panel-heading {
       .icons, .panel-title {
         display: inline-block;
@@ -107,6 +112,12 @@
         }
       }
     }
+
+    td.icon {
+      img {
+        width: 24px
+      }
+    }
   }
 
   #exchangers-empty {
@@ -122,6 +133,10 @@
     -o-transition: background-color 3s ease-out;
     -ms-transition: background-color 3s ease-out;
     transition: background-color 3s ease-out;
+
+    .currency {
+      margin-left: 5px;
+    }
 
     &.danger {
       background-color: $red_background;
